--- a/url_shortner_app/pubspec.yaml
+++ b/url_shortner_app/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   animated_text_kit: ^4.2.3
+  awesome_dialog: ^3.2.1
   blurry_modal_progress_hud: ^1.1.1
   flutter:
     sdk: flutter
